--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -81,7 +81,8 @@
 			</div>
 			<div class="ct-bottom">
 				<div class="rodape">
-					<span>teste</span>
+					<p>2015 Stefanini - Todos os direitos reservados</p>
+					<h2>SGR Stefanini</h2>
 				</div>
 			</div>
 		</div>
