--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -352,9 +352,9 @@ input[type=text] {
     position: absolute;
     color: #fff;
     background-color: #201B55;
-    width: 98.75%;
+    width: 100%;
     height: 20px;
-    padding: 10px;
+    padding: 10px 0;
     display: block;
 }
 
