--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -17,11 +17,12 @@
 		<div class="ct-top">
 			<div class="container--topmenu">
 				<div class="cabecalho">
-					<a href="#"> <img class="img-logo" />
+					<a href="#">
+						<h:graphicImage styleClass="img-logo" value="/resources/img/logo.jpg" /> 
 					</a>
 					<div class="nome-sistema">
-						<h1>S.G.R</h1>
-					</div>
+						<h:graphicImage styleClass="img-sistema" value="/resources/img/SGR.jpg" /> 
+					</div> 
 					<div class="calendario-data">
 						<h:graphicImage value="/resources/img/calendar.png"
 							styleClass="date-time-icon" />
