--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -71,6 +71,9 @@
 							<li><h:link outcome="pretty:relatorioProfissional">#{message['title.relatorio.profissional.equipe']}</h:link></li>
 							<li class="item-last submenu-categoria"><h:link
 									outcome="pretty:relatorioContratacao">#{message['title.relatorio.forma.contratacao']}</h:link></li>
+							<li class="item-last submenu-categoria"><h:link
+									outcome="pretty:relatorioValorEquipe">#{message['title.relatorio.valor.contratacao']}</h:link></li>
+						
 						</ul></li>
 				</ul>
 			</div>
