--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -63,15 +63,16 @@
 							<li class="item-last"><h:link outcome="pretty:status"
 									styleClass="submenu-categoria">#{message['title.status']}</h:link></li>
 						</ul></li>
-					<li><a href="#" class="menu-categoria">Relatorios<span
-							class="arrow">&#9660;</span></a>
+					<li>
+						<a href="#" class="menu-categoria">Relatorios<span class="arrow">&#9660;</span></a>
 						<ul class="sub-menu">
 							<li><span>#{message['title.relatorio.equipe']}</span></li>
 							<p:separator />
 							<li><h:link outcome="pretty:relatorioProfissional">#{message['title.relatorio.profissional.equipe']}</h:link></li>
 							<li class="item-last submenu-categoria"><h:link
 									outcome="pretty:relatorioContratacao">#{message['title.relatorio.forma.contratacao']}</h:link></li>
-						</ul></li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</div>
