Gabriel - criado relatorio perfil por equipe, ajustado properties, ajustado templade defoult.

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -74,6 +74,9 @@
 							</li>
 							<li class="item-last submenu-categoria">
 								<h:link	outcome="pretty:relatorioValorEquipe">#{message['title.relatorio.valor.contratacao']}</h:link>
+							</li>
+							<li class="item-last submenu-categoria">
+								<h:link	outcome="pretty:relatorioPerfilEquipe">#{message['title.relatorio.perfil.equipe']}</h:link>
 							</li>	
 						</ul>
 					</li>
