--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -97,7 +97,7 @@ html, body {
 	float: left;
 	width: 160px;
 	margin-top: 45px;
-	margin-left: 50px;
+	margin-left: 40px;
 }
 
 .calendario-data span, .relogio-hora span {
@@ -231,13 +231,14 @@ html, body {
 .img-logo {
 	float: left;
 	margin-top: 30px;
+	width: 35%;
 }
 
 .img-sistema{
 	width: 10%;
 	float: left;
 	margin-left: 50px;
-	margin-top: 2%;
+	margin-top: 4%;
 }
 
 .date-time-icon {
@@ -402,6 +403,10 @@ input[type=text] {
 
 .ui-datatable-header.ui-widget-header.ui-corner-top {
 	text-align: right;
+}
+
+.ui-datatable thead th:last-child {
+    width: 15%;
 }
 
 .ui-widget .ui-widget {
