Gabriel - criado relatorio valor hora medio por celula, ajustado porperties, ajustado defoult.xhtml, criado metodos em relatorio manager e service refetentes ao relatorio.

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -76,6 +76,11 @@
 							<li class="item-last submenu-categoria">
 								<h:link	outcome="pretty:relatorioPerfilEquipe">#{message['title.relatorio.perfil.equipe']}</h:link>
 							</li>	
+							<li><span>#{message['title.relatorio.celula']}</span></li>
+							<p:separator />
+							<li>
+								<h:link	outcome="pretty:relatorioValorCelula">#{message['title.relatorio.valor.celula']}</h:link>
+							</li>
 						</ul>
 					</li>
 				</ul>
