Ajuste no layout de historico

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -78,7 +78,7 @@
 							</li>	
 							<li><span>#{message['title.relatorio.celula']}</span></li>
 							<p:separator />
-							<li>
+							<li class="item-last submenu-categoria">
 								<h:link	outcome="pretty:relatorioValorCelula">#{message['title.relatorio.valor.celula']}</h:link>
 							</li>
 						</ul>
