--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -78,8 +78,11 @@
 							</li>	
 							<li><span>#{message['title.relatorio.celula']}</span></li>
 							<p:separator />
-							<li class="item-last submenu-categoria">
+							<li >
 								<h:link	outcome="pretty:relatorioValorCelula">#{message['title.relatorio.valor.celula']}</h:link>
+							</li>
+							<li class="item-last submenu-categoria">
+								<h:link	outcome="pretty:relatorioContratacaoCelula">#{message['title.relatorio.forma.contratacao.celula']}</h:link>
 							</li>
 						</ul>
 					</li>
