--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -81,8 +81,11 @@
 							<li >
 								<h:link	outcome="pretty:relatorioValorCelula">#{message['title.relatorio.valor.celula']}</h:link>
 							</li>
-							<li class="item-last submenu-categoria">
+							<li >
 								<h:link	outcome="pretty:relatorioContratacaoCelula">#{message['title.relatorio.forma.contratacao.celula']}</h:link>
+							</li>
+							<li class="item-last submenu-categoria">
+								<h:link	outcome="pretty:relatorioPerfilCelula">#{message['title.relatorio.perfil.celula']}</h:link>
 							</li>
 						</ul>
 					</li>
