Tela de lista de relatorios

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -18,7 +18,7 @@
 			<div class="container--topmenu">
 				<div class="cabecalho">
 					<a href="#">
-						<h:graphicImage styleClass="img-logo" value="/resources/img/sistem.jpg" /> 
+						<h:graphicImage styleClass="img-logo" value="/resources/img/logo.jpg" /> 
 					</a>
 					<div class="calendario-data">
 						<h:graphicImage value="/resources/img/calendar.png"
