--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -666,7 +666,7 @@ input[type=text] {
 	font-size: 30px !important;
 	color: #1B4581;
 	font-weight: 500;
-	margin: 15px 0;
+	margin: 25px 0 15px 0 ;
 }
 
 .titulo-pagina-relatorio{
