Refatoração das listas com paginação

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -316,6 +316,10 @@ html, body {
 	width: 160px;
 }
 
+.ui-paginator.ui-paginator-top {
+    display: none;
+}
+
 .ui-datatable-scrollable-theadclone th.ui-state-default {
     height: 10px;
     padding: 10px;
