--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -89,6 +89,17 @@
 							</li>
 						</ul>
 					</li>
+					<li>
+						<a href="#" class="menu-categoria">Projeto<span class="arrow">&#9660;</span></a>
+						<ul class="sub-menu">
+							<li>
+								<h:link outcome="pretty:projeto-incluir">#{message['title.projeto.cadastro']}</h:link>
+							</li>
+							<li class="item-last submenu-categoria">
+								<h:link outcome="pretty:projeto">#{message['title.projeto.listar']}</h:link>
+							</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</div>
