--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -90,15 +90,8 @@
 						</ul>
 					</li>
 					<li>
-						<a href="#" class="menu-categoria">Projeto<span class="arrow">&#9660;</span></a>
-						<ul class="sub-menu">
-							<li>
-								<h:link outcome="pretty:projeto-incluir">#{message['title.projeto.cadastro']}</h:link>
-							</li>
-							<li class="item-last submenu-categoria">
-								<h:link outcome="pretty:projeto">#{message['title.projeto.listar']}</h:link>
-							</li>
-						</ul>
+						<h:link styleClass="menu-categoria" outcome="pretty:projeto">#{message['title.projeto']}</h:link>
+						
 					</li>
 				</ul>
 			</div>
