--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -13,7 +13,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 	border: 0;
 	font-size: 16px;
 	font-family: sans-serif;
-	vertical-align: baseline;
+	/* vertical-align: baseline; */
 }
 
 /* HTML5 display-role reset for older browsers */
