Mateus - Ajustado layout Alocacao, falta border da grid

--- a/src/main/webapp/pages/template/default.xhtml
+++ b/src/main/webapp/pages/template/default.xhtml
@@ -90,7 +90,7 @@
 						</ul>
 					</li>
 					<li>
-						<h:link styleClass="menu-categoria" outcome="pretty:projeto">#{message['title.projeto']}</h:link>
+						<h:link styleClass="menu-categoria" outcome="pretty:alocacao">#{message['title.projeto']}</h:link>
 						
 					</li>
 				</ul>
